--- a/app/src/main/res/layout/activity_order_screen.xml
+++ b/app/src/main/res/layout/activity_order_screen.xml
@@ -1,24 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="horizontal"
 tools:context="com.epson.moverio.bt300.sample.samplehwkey.OMSDisplayActivity">
 
-<!-- The primary full-screen view. This can be replaced with whatever view
-     is needed to present your content, e.g. VideoView, SurfaceView,
-     TextureView, etc. -->
-<ImageView
-    android:id="@+id/oms_image"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:keepScreenOn="true"
-    android:textColor="#33b5e5"
-    android:textSize="50sp"
-    android:textStyle="bold" />
 
+    <RelativeLayout
+        android:id="@+id/metric_sublayout"
+        android:layout_width="0dip"
+        android:layout_height="match_parent"
+        android:layout_weight="0.8">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/oms_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="0dip"
+        android:layout_height="match_parent"
+        android:layout_weight="0.2"
+        android:paddingTop="60pt">
+
+        <TextView
+            android:id="@+id/quantity_spected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/smart_text"
+            android:text="0.5434"
+            android:textSize="35dp"
+            />
+
+        <EditText
+            android:id="@+id/quantity_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/quantity_spected"
+            android:textColor="@color/smart_text"
+            android:textSize="35dp"
+            />
+
+    </RelativeLayout>
+
+</LinearLayout >
 
