--- a/app/src/main/res/layout/activity_wsmdselection.xml
+++ b/app/src/main/res/layout/activity_wsmdselection.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#282a3c"
     tools:context="com.epson.moverio.bt300.sample.samplehwkey.WSMDSelectionActivity">
 
     <RelativeLayout
@@ -35,6 +35,7 @@
             android:id="@+id/personnel_code"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_marginTop="180dp"
             android:textSize="30sp"/>
 
         <TextView
