--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#2f344c</color>
+    <color name="colorPrimaryDark">#2f344c</color>
     <color name="colorAccent">#FF4081</color>
     <color name="black_overlay">#66000000</color>
 
-    <color name="smartPrimary">#3F51B5</color>
-    <color name="smartPrimaryDark">#303F9F</color>
+    <color name="smartPrimary">#2f344c</color>
+    <color name="smartPrimaryDark">#2f344c</color>
     <color name="smartAccent">#FF4081</color>
     <color name="smart_overlay">#66000000</color>
 
