--- a/app/src/main/res/layout/activity_wsmdselection.xml
+++ b/app/src/main/res/layout/activity_wsmdselection.xml
@@ -17,6 +17,18 @@
         android:layout_height="match_parent"
         android:layout_weight="0.6">
 
+        <RelativeLayout
+            android:id="@+id/loadingPanel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center" >
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true" />
+        </RelativeLayout>
+
         <ImageView
             android:id="@+id/cflogo"
             android:layout_width="70pt"
