--- a/app/src/main/res/layout/component_list.xml
+++ b/app/src/main/res/layout/component_list.xml
@@ -11,7 +11,7 @@
         android:layout_width="50dip"
         android:layout_height="50dip"
         android:background="@color/smart_text"
-        android:src="@mipmap/assembly"/>
+        android:src="@drawable/component"/>
 
     <TextView
         android:id="@+id/component_code"
