--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="smart_overlay">#66000000</color>
 
     <color name="smart_background">#000000</color>
-    <color name="smart_text">#cecece</color>
+    <color name="smart_text">#080808</color>
 
     <color name="smartTransparent">#38d6d6d6</color>
     <color name="transparent">#0a494949</color>
