--- a/app/src/main/res/layout/activity_wsmdselection.xml
+++ b/app/src/main/res/layout/activity_wsmdselection.xml
@@ -31,7 +31,7 @@
 
         <ImageView
             android:id="@+id/cflogo"
-            android:layout_width="70pt"
+            android:layout_width="140pt"
             android:layout_height="wrap_content"
             android:adjustViewBounds = "true"
             android:layout_centerHorizontal="true"
@@ -40,13 +40,12 @@
 
         <ImageView
             android:id="@+id/personnel_image"
-            android:layout_width="70pt"
+            android:layout_width="140pt"
             android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/cflogo"
             android:layout_below="@+id/cflogo"
-            android:adjustViewBounds = "true"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/personnel_img_background"
-            />
+            android:adjustViewBounds="true"
+            android:background="@drawable/personnel_img_background" />
 
         <TextView
             android:id="@+id/personnel_name"
@@ -54,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_below="@+id/personnel_image"
             android:textSize="25sp"
+            android:text="NOMBRE"
             android:layout_centerHorizontal="true"
             android:textColor="#000000"/>
 
@@ -63,6 +63,16 @@
             android:layout_width="wrap_content"
             android:layout_below="@+id/personnel_name"
             android:textColor="#000000"
+            android:text="CODE"
+            android:layout_centerHorizontal="true"
+            android:textSize="25sp"/>
+        <TextView
+            android:id="@+id/personnel_email"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_below="@+id/personnel_code"
+            android:textColor="#000000"
+            android:text="Email"
             android:layout_centerHorizontal="true"
             android:textSize="25sp"/>
 
@@ -71,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text=""
-            android:layout_below="@+id/personnel_code"
+            android:layout_below="@+id/personnel_email"
             android:textColor="#000000"
             android:layout_centerHorizontal="true"
             android:textSize="20sp" />
