--- a/app/src/main/res/layout/mfseqorder_list.xml
+++ b/app/src/main/res/layout/mfseqorder_list.xml
@@ -15,20 +15,22 @@
 
     <TextView
         android:id="@+id/mfseq_asmdscr"
-        android:layout_toRightOf="@+id/mfseq_list_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dip"
-        android:textStyle="bold"
-        />
+        android:layout_toRightOf="@+id/mfseq_list_image"
+        android:text="ASMDSCR"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/mfseq_asmcode"
         android:layout_toRightOf="@+id/mfseq_list_image"
-        android:layout_width="wrap_content"
+        android:layout_below="@+id/mfseq_asmdscr"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/mfseq_asmdscr"
         android:layout_marginLeft="5dip"
+        android:text="ASMDSCR"
         />
 
     <TextView
@@ -38,15 +40,19 @@
         android:layout_alignBaseline="@+id/mfseq_asmcode"
         android:layout_alignBottom="@+id/mfseq_asmcode"
         android:layout_alignParentRight="true"
+        android:text="ASMDSCR"
+        android:textSize="50dp"
         />
 
     <TextView
         android:id="@+id/mfseq_serialn"
-        android:layout_toRightOf="@+id/mfseq_list_image"
+        android:layout_toRightOf="@+id/mfseq_asmcode"
+        android:layout_below="@+id/mfseq_asmdscr"
         android:layout_marginLeft="5dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/mfseq_asmcode"
+
+        android:text="ASMDSCR"
         />
 
 </RelativeLayout>
