--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/fullscreen_content_controls"
         style="?metaButtonBarStyle"
         android:layout_width="match_parent"
@@ -13,38 +12,46 @@
         tools:context="com.epson.moverio.bt300.sample.samplehwkey.SelectionActivity"
         tools:ignore="">
 
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/smartTransparent"
-            android:divider="@color/smart_background"
-            android:dividerHeight="1dp"
-            android:layout_marginTop="63dp"
-            android:layout_below="@+id/imageView2"
-            android:textColor="@color/smart_text"></ListView>
-
     <TextView
         android:id="@+id/WSLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="128dp"
-        android:layout_marginTop="29dp"
+        android:layout_alignParentLeft="true"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:textSize="30sp"
+        android:textColor="@color/smartAccent"/>
+
+    <TextView
+        android:id="@+id/selection_personname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/list"
+        android:textSize="30sp"
+        android:layout_alignParentLeft="true"
+        android:ems="10"
+        android:textColor="@color/smartAccent"/>
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="647dp"
-        android:layout_toStartOf="@+id/WSLabel"
-        android:scaleType="fitStart"
+        android:layout_height="90dp"
+        android:layout_marginRight="30dip"
+        android:layout_marginTop="30dip"
+        android:layout_toRightOf="@+id/WSLabel"
+        android:scaleType="fitEnd"
         android:src="@drawable/logocf" />
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/smartTransparent"
+        android:divider="@color/smart_background"
+        android:dividerHeight="1dp"
+        android:layout_marginTop="63dp"
+        android:layout_below="@+id/imageView2"
+        android:textColor="@color/smart_text"></ListView>
 
 </RelativeLayout>
