--- a/app/src/main/res/layout/activity_wsmdselection.xml
+++ b/app/src/main/res/layout/activity_wsmdselection.xml
@@ -31,7 +31,8 @@
 
         <ImageView
             android:id="@+id/cflogo"
-            android:layout_width="140pt"
+            android:layout_width="300dp"
+            android:layout_marginTop="30dip"
             android:layout_height="wrap_content"
             android:adjustViewBounds = "true"
             android:layout_centerHorizontal="true"
@@ -40,7 +41,8 @@
 
         <ImageView
             android:id="@+id/personnel_image"
-            android:layout_width="140pt"
+            android:layout_width="270dp"
+            android:layout_marginTop="20dip"
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/cflogo"
             android:layout_below="@+id/cflogo"
@@ -53,7 +55,6 @@
             android:layout_width="wrap_content"
             android:layout_below="@+id/personnel_image"
             android:textSize="25sp"
-            android:text="NOMBRE"
             android:layout_centerHorizontal="true"
             android:textColor="#000000"/>
 
@@ -63,7 +64,6 @@
             android:layout_width="wrap_content"
             android:layout_below="@+id/personnel_name"
             android:textColor="#000000"
-            android:text="CODE"
             android:layout_centerHorizontal="true"
             android:textSize="25sp"/>
         <TextView
@@ -72,7 +72,6 @@
             android:layout_width="wrap_content"
             android:layout_below="@+id/personnel_code"
             android:textColor="#000000"
-            android:text="Email"
             android:layout_centerHorizontal="true"
             android:textSize="25sp"/>
 
