--- a/app/src/main/res/layout/mfseqorder_list.xml
+++ b/app/src/main/res/layout/mfseqorder_list.xml
@@ -8,39 +8,38 @@
 
     <ImageView
         android:id="@+id/mfseq_list_image"
-        android:layout_width="50dip"
-        android:layout_height="50dip"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
         android:background="@color/smart_text"
-        android:src="@mipmap/assembly"/>
+        android:src="@drawable/assembly"/>
 
     <TextView
         android:id="@+id/mfseq_asmdscr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
-        android:layout_toRightOf="@+id/mfseq_list_image"
-        android:text="ASMDSCR"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:layout_marginLeft="10dip"
+        android:textSize="50dp"
+        android:textStyle="bold"
+        android:textColor="@color/smartAccent"/>
 
     <TextView
         android:id="@+id/mfseq_asmcode"
         android:layout_toRightOf="@+id/mfseq_list_image"
         android:layout_below="@+id/mfseq_asmdscr"
-        android:layout_width="200dp"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
-        android:text="ASMDSCR"
+        android:layout_marginLeft="10dip"
+        android:textSize="50dp"
+        android:textColor="@color/smartAccent"
         />
 
     <TextView
-        android:id="@+id/mfseq_flowid"
+        android:id="@+id/mfseq_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/mfseq_asmcode"
         android:layout_alignBottom="@+id/mfseq_asmcode"
         android:layout_alignParentRight="true"
-        android:text="ASMDSCR"
         android:textSize="50dp"
         />
 
@@ -51,8 +50,8 @@
         android:layout_marginLeft="5dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:text="ASMDSCR"
+        android:textSize="50dp"
+        android:textColor="@color/smartAccent"
         />
 
 </RelativeLayout>
