--- a/app/src/main/res/layout/tpc_alert_layout.xml
+++ b/app/src/main/res/layout/tpc_alert_layout.xml
@@ -8,7 +8,7 @@
         android:layout_width="50dip"
         android:layout_height="50dip"
         android:background="@color/smart_text"
-        android:src="@mipmap/metrics"/>
+        android:src="@drawable/metrics"/>
 
     <TextView
         android:id="@+id/tpc_ordercode"
