--- a/app/src/main/res/layout/component_list.xml
+++ b/app/src/main/res/layout/component_list.xml
@@ -4,6 +4,8 @@
     android:layout_height="wrap_content"
     android:minHeight="50dp"
     android:orientation="horizontal"
+    android:background="@drawable/background"
+    android:textColor="@color/smartAccent"
     android:padding="5dip" >
 
     <ImageView
@@ -19,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dip"
+        android:textColor="@color/smartAccent"
         android:textStyle="bold"
         />
 
@@ -28,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/component_code"
+        android:textColor="@color/smartAccent"
         android:layout_marginLeft="5dip"
         />
 
@@ -37,6 +41,7 @@
         android:layout_height="wrap_content"
         android:textSize="32pt"
         android:layout_alignParentRight="true"
+        android:textColor="@color/smartAccent"
         />
 
 </RelativeLayout>
