--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -12,36 +12,44 @@
         tools:context="com.epson.moverio.bt300.sample.samplehwkey.SelectionActivity"
         tools:ignore="">
 
-    <TextView
-        android:id="@+id/WSLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:ems="10"
-        android:textSize="30sp"
-        android:textColor="@color/smartAccent"/>
+        <RelativeLayout
+            android:id="@+id/top_panel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
 
-    <TextView
-        android:id="@+id/selection_personname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/list"
-        android:textSize="30sp"
-        android:layout_alignParentLeft="true"
-        android:ems="10"
-        android:textColor="@color/smartAccent"/>
+            <TextView
+                android:id="@+id/WSLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="600sp"
+                android:layout_alignParentStart="true"
+                android:textColor="@color/smartAccent"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:textSize="30sp" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="90dp"
-        android:layout_marginRight="30dip"
-        android:layout_marginTop="30dip"
-        android:layout_toRightOf="@+id/WSLabel"
-        android:scaleType="fitEnd"
-        android:src="@drawable/logocf" />
+            <TextView
+                android:id="@+id/selection_personname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/WSLabel"
+                android:textColor="@color/smartAccent"
+                android:layout_marginLeft="10dp"
+                android:textSize="30sp" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="110dp"
+                android:layout_alignStart="@+id/WSLabel"
+                android:layout_marginTop="10dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitEnd"
+                android:src="@drawable/logocf" />
+
+
+        </RelativeLayout>
 
     <ListView
         android:id="@+id/list"
@@ -51,7 +59,7 @@
         android:divider="@color/smart_background"
         android:dividerHeight="1dp"
         android:layout_marginTop="63dp"
-        android:layout_below="@+id/imageView2"
+        android:layout_below="@+id/top_panel"
         android:textColor="@color/smart_text"></ListView>
 
 </RelativeLayout>
