--- a/app/src/main/res/layout/mfseqorder_list.xml
+++ b/app/src/main/res/layout/mfseqorder_list.xml
@@ -6,52 +6,81 @@
     android:orientation="horizontal"
     android:padding="5dip" >
 
-    <ImageView
-        android:id="@+id/mfseq_list_image"
-        android:layout_width="80dip"
-        android:layout_height="80dip"
-        android:background="@color/smart_text"
-        android:src="@drawable/assembly"/>
+    <RelativeLayout
+        android:id="@+id/mfseq_image_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/smart_alfa20">
+
+        <ImageView
+            android:id="@+id/mfseq_list_image"
+            android:layout_width="90dip"
+            android:layout_height="90dip"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="27dp"
+            android:adjustViewBounds="false"
+            android:cropToPadding="false"
+            android:src="@drawable/assembly" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/mfseq_asmdscr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
-        android:textSize="50dp"
+        android:layout_toRightOf="@+id/mfseq_image_container"
+        android:textSize="40dp"
         android:textStyle="bold"
         android:textColor="@color/smartAccent"/>
 
     <TextView
         android:id="@+id/mfseq_asmcode"
-        android:layout_toRightOf="@+id/mfseq_list_image"
+        android:layout_toRightOf="@+id/mfseq_image_container"
         android:layout_below="@+id/mfseq_asmdscr"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
-        android:textSize="50dp"
+        android:textSize="35dp"
         android:textColor="@color/smartAccent"
-        />
-
-    <TextView
-        android:id="@+id/mfseq_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/mfseq_asmcode"
-        android:layout_alignBottom="@+id/mfseq_asmcode"
-        android:layout_alignParentRight="true"
-        android:textSize="50dp"
         />
 
     <TextView
         android:id="@+id/mfseq_serialn"
-        android:layout_toRightOf="@+id/mfseq_asmcode"
-        android:layout_below="@+id/mfseq_asmdscr"
-        android:layout_marginLeft="5dip"
+        android:layout_below="@+id/mfseq_asmcode"
+        android:layout_marginLeft="10dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="50dp"
+        android:textSize="30dp"
+        android:layout_toRightOf="@+id/mfseq_image_container"
         android:textColor="@color/smartAccent"
         />
+    <RelativeLayout
+        android:id="@+id/mfseq_status_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/mfseq_status"
+            android:layout_width="60dip"
+            android:layout_height="60dip"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="27dp"
+            android:adjustViewBounds="false"
+            android:cropToPadding="false"
+            android:src="@drawable/logocf" />
+
+        <TextView
+            android:id="@+id/mfseq_quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_toStartOf="@+id/mfseq_status"
+            android:textColor="@color/smartAccent"
+            android:textSize="70dp" />
+
+    </RelativeLayout>
 </RelativeLayout>
