--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,11 @@
     <color name="smart_background">#ffffff</color>
     <color name="smart_text">#ffffff</color>
 
+    <color name="smart_alfa20">#21000000</color>
+
+    <color name="smart_alfa10">#0b000000</color>
+
     <color name="smartTransparent">#38d6d6d6</color>
-    <color name="transparent">#0a494949</color>
+    <color name="transparent">#00494949</color>
     <color name="black">#0a494949</color>
 </resources>
