--- a/app/src/main/res/layout/metrics_list.xml
+++ b/app/src/main/res/layout/metrics_list.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/metric_list_image"
-        android:layout_width="50dip"
-        android:layout_height="50dip"
+        android:layout_width="70dip"
+        android:layout_height="70dip"
         android:background="@color/smart_text"
         android:src="@drawable/metrics"/>
 
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dip"
         android:textStyle="bold"
+        android:textSize="25sp"
         />
 
     <TextView
@@ -29,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/metric_code"
         android:layout_marginLeft="5dip"
+        android:textSize="25sp"
         />
 
     <EditText
