--- a/app/src/main/res/layout/mfseqorder_list.xml
+++ b/app/src/main/res/layout/mfseqorder_list.xml
@@ -9,8 +9,7 @@
     <RelativeLayout
         android:id="@+id/mfseq_image_container"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/smart_alfa20">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/mfseq_list_image"
