--- a/app/src/main/res/layout/activity_order_screen.xml
+++ b/app/src/main/res/layout/activity_order_screen.xml
@@ -37,7 +37,7 @@
             android:id="@+id/animated_voice"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            app:srcCompat="@drawable/animated_voicerecog"
+            android:src="@drawable/m1"
             />
 
         <ImageView
