--- a/app/src/main/res/layout/metrics_list.xml
+++ b/app/src/main/res/layout/metrics_list.xml
@@ -45,10 +45,13 @@
 
     <EditText
         android:id="@+id/metric_input"
+        android:layout_toRightOf="@+id/metric_list_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/metric_code"
+        android:layout_marginLeft="175dip"
+        android:textSize="25sp"
         android:singleLine="true"
-        android:layout_alignParentRight="true"
         />
 
 </RelativeLayout>
