--- a/app/src/main/res/layout/metrics_list.xml
+++ b/app/src/main/res/layout/metrics_list.xml
@@ -45,12 +45,11 @@
 
     <EditText
         android:id="@+id/metric_input"
-        android:layout_toRightOf="@+id/metric_list_image"
-        android:layout_width="wrap_content"
+        android:layout_width="132dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/metric_code"
-        android:layout_marginLeft="175dp"
-        android:singleLine="true"
-         />
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="967dp"
+        android:layout_toRightOf="@+id/metric_spected"
+        android:singleLine="true" />
 
 </RelativeLayout>
