--- a/app/src/main/res/layout/metrics_list.xml
+++ b/app/src/main/res/layout/metrics_list.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/metric_code"
         android:layout_marginLeft="5dip"
+        android:layout_marginTop="9dip"
         android:textSize="25sp"
         />
 
@@ -39,17 +40,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/metric_code"
+        android:layout_marginTop="9dip"
         android:layout_marginLeft="100dip"
         android:textSize="25sp"
         />
 
     <EditText
         android:id="@+id/metric_input"
-        android:layout_width="132dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="967dp"
+        android:layout_marginLeft="25dp"
+        android:layout_below="@id/metric_code"
         android:layout_toRightOf="@+id/metric_spected"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:textSize="25sp"/>
 
 </RelativeLayout>
