--- a/app/src/main/res/layout/report_tqc.xml
+++ b/app/src/main/res/layout/report_tqc.xml
@@ -8,43 +8,48 @@
 
     <ImageView
         android:id="@+id/imageReport"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
+        android:layout_width="620dp"
+        android:layout_height="433dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="15dp"
         app:srcCompat="@drawable/componentlist"
         tools:layout_editor_absoluteX="92dp"
         tools:layout_editor_absoluteY="40dp" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="138dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="286dp" />
-
-    <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="181dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="199dp"
-        android:text="TextView"
+        android:layout_alignStart="@+id/button"
+        android:layout_marginBottom="198dp"
+        android:background="@color/metricColorRed"
+        android:text="Emergency"
+        android:textAlignment="center"
+        android:textColor="@color/smart_text"
+        android:textSize="30dp"
         tools:layout_editor_absoluteX="163dp"
         tools:layout_editor_absoluteY="343dp" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:id="@+id/spinnerAvailIssue"
+        android:layout_width="389dp"
+        android:layout_height="81dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="172dp"
+        android:layout_marginTop="200dp"
+        />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="156dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="399dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="88dp"
+        android:layout_marginEnd="281dp"
+        android:text="Report" />
+
 </RelativeLayout>
