--- a/app/src/main/res/layout/report_tqc.xml
+++ b/app/src/main/res/layout/report_tqc.xml
@@ -24,7 +24,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/spinnepriority"
         android:layout_marginTop="160dp"
-        android:background="@color/black_overlay"/>
+        android:background="@color/spinner_background"/>
 
     <Button
         android:id="@+id/button"
@@ -33,6 +33,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="52dp"
+        android:onClick="addNotification"
         android:text="Report" />
 
     <Spinner
@@ -43,7 +44,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginEnd="124dp"
         android:layout_marginTop="250dp"
-        android:background="@color/black_overlay"/>
+        android:background="@color/spinner_background"/>
 
     <TextView
         android:id="@+id/textView"
@@ -68,7 +69,7 @@
         android:layout_height="64dp"
         android:layout_alignStart="@+id/spinnerAvailIssue"
         android:layout_alignTop="@+id/imageReport"
-        android:background="@color/black_overlay"/>
+        android:background="@color/spinner_background"/>
 
     <TextView
         android:id="@+id/textView3"
