--- a/app/src/main/res/layout/report_tqc.xml
+++ b/app/src/main/res/layout/report_tqc.xml
@@ -61,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/spinnepriority"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="250dp"
         android:text="Priority" />
 
     <Spinner
