--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorAccent2">#008ecf</color>
     <color name="black_overlay">#66000000</color>
 
-    <color name="spinner_background">#e1e1e1</color>
+    <color name="spinner_background">#7400a2ff</color>
     <color name="spinner_text">#2f344c</color>
 
     <color name="smartPrimary">#2f344c</color>
