--- a/app/src/main/res/layout/report_tqc.xml
+++ b/app/src/main/res/layout/report_tqc.xml
@@ -17,10 +17,10 @@
         tools:layout_editor_absoluteX="92dp"
         tools:layout_editor_absoluteY="40dp" />
 
-    <Spinner
+    <TextView
         android:id="@+id/spinnerAvailIssue"
         android:layout_width="389dp"
-        android:layout_height="67dp"
+        android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/spinnepriority"
         android:layout_marginTop="160dp"
@@ -36,20 +36,20 @@
         android:onClick="clickReport"
         android:text="Report" />
 
-    <Spinner
+    <TextView
         android:id="@+id/spinnepriority"
         android:layout_width="389dp"
-        android:layout_height="63dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="124dp"
-        android:layout_marginTop="250dp"
-        android:background="@color/spinner_background"/>
+        android:layout_height="40dp"
+        android:layout_above="@+id/comments"
+        android:layout_marginBottom="40dp"
+        android:layout_toEndOf="@+id/textView3"
+        android:background="@color/spinner_background" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toStartOf="@+id/spinnerAvailIssue"
         android:layout_centerHorizontal="true"
         android:layout_alignTop="@+id/imageReport"
         android:layout_marginTop="100dp"
@@ -59,26 +59,24 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/spinnepriority"
+        android:layout_alignTop="@+id/spinnepriority"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="250dp"
         android:text="Priority" />
 
-    <Spinner
+    <TextView
         android:id="@+id/spinnerdefect"
         android:layout_width="389dp"
-        android:layout_height="64dp"
-        android:layout_alignStart="@+id/spinnerAvailIssue"
-        android:layout_alignTop="@+id/imageReport"
-        android:background="@color/spinner_background"/>
+        android:layout_height="40dp"
+        android:layout_alignTop="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:background="@color/spinner_background" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imageReport"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@+id/spinnerAvailIssue"
+        android:layout_toEndOf="@+id/button"
         android:text="Defect" />
 
     <TextView
@@ -133,10 +131,17 @@
         android:id="@+id/comments"
         android:layout_width="389dp"
         android:layout_height="63dp"
+        android:layout_alignBottom="@+id/imageReport"
+        android:layout_marginBottom="72dp"
+        android:layout_toEndOf="@+id/textView"
+        android:textSize="20sp" />
+
+    <ImageView
+        android:id="@+id/tqc_mic"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="124dp"
-        android:layout_marginTop="350dp"
-        android:textSize="20sp" />
+        android:src="@drawable/m2" />
 
 </RelativeLayout>
