--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -97,7 +97,7 @@
                 android:layout_width="476dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_menu_camera" />
+                android:src="@drawable/camera" />
 
         </RelativeLayout>
 
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="75dp"
                 android:layout_marginTop="50dp"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:text="Defect" />
 
             <TextView
@@ -122,7 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="75dp"
                 android:layout_marginTop="50dp"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:text="Decision suggested"
                 android:layout_below="@id/defectLabel"/>
 
@@ -132,7 +132,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="75dp"
                 android:layout_marginTop="50dp"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:text="Priority"
                 android:layout_below="@id/decisionLabel"/>
 
@@ -142,7 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="75dp"
                 android:layout_marginTop="63dp"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:text="Comments"
                 android:layout_below="@id/priorityLabel"/>
 
@@ -151,7 +151,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:layout_toRightOf="@+id/defectLabel"/>
 
             <TextView
@@ -159,7 +159,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:layout_below="@+id/spinner_defect"
                 android:layout_toRightOf="@+id/decisionLabel"/>
 
@@ -168,7 +168,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:layout_below="@+id/spinnerIssues"
                 android:layout_toRightOf="@+id/priorityLabel"/>
 
@@ -180,7 +180,7 @@
                 android:text=""
                 android:focusable="false"
                 android:layout_below="@+id/spinnepriority"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:layout_toRightOf="@+id/commentsLabel"/>
 
             <Button
@@ -191,7 +191,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="250dp"
                 android:onClick="clickReport"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:layout_below="@+id/commentsLabel"
                 android:text="Report" />
 
